Fix placement of skipIfAlreadyExists to under restoreFlags in restore-backup.yaml.j2

--- a/roles/trilio_kubernetes/templates/restore-backup.yaml.j2
+++ b/roles/trilio_kubernetes/templates/restore-backup.yaml.j2
@@ -9,4 +9,5 @@ spec:
       name: {{ trilio_kubernetes_restore_name }}
       namespace: {{ trilio_kubernetes_namespace }}
     restoreNamespace: {{ trilio_kubernetes_restore_namespace }}
+  restoreFlags:
     skipIfAlreadyExists: true
